k8s/plain-yaml/network-policies/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: datalake
spec:
  podSelector: {}
  policyTypes:
  - Ingress
