k8s/plain-yaml/network-policies/20-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-identity-db-access
  namespace: datalake
spec:
  podSelector:
    matchLabels:
      app: identity-postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: identity-service
    ports:
    - protocol: TCP
      port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metadata-db-access
  namespace: datalake
spec:
  podSelector:
    matchLabels:
      app: metadata-postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: metadata-service
    ports:
    - protocol: TCP
      port: 5432
